2003-11-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-msg.el (gnus-summary-yank-message): Don't bind
	gnus-display-mime-function to nil so that non-ascii text is
	decoded and attachments are not shown.

	* message.el (message-cite-original-without-signature): Replace
	the value of message-reply-headers with the yanked article since
	it may be a different article from the original.
	(message-cite-original): Ditto.

2003-11-25  Teodor Zlatanov  <tzz@lifelogs.com>

	* spam.el (spam-blacklist-ignored-regexes): new variable, so
	blacklisting can ignore certain regular expressions (e.g. the
	user's e-mail address)
	(spam-bogofilter-spam-strong-switch,
	spam-bogofilter-ham-strong-switch): options used when articles are
	already registered as the opposite classification
	(spam-old-ham-articles, spam-old-spam-articles): lists of ham and
	spam articles, generated when a summary buffer is entered, and
	consulted when it's exited so we know what articles are changing
	state from spam to ham or vice-versa
	(spam-xor): everyone needs a little convenience
	(spam-list-of-processors): lookup table for old-style spam/ham
	exits processors
	(spam-group-processor-p): support old-style and new-style spam/ham
	exit processors
	(spam-group-processor-multiple-p): handle new-style spam/hamn exit
	processors
	(spam-summary-prepare): use spam-old-{ham,spam}-articles; change
	logic to iterate over list of processors instead of manual
	individual lookup, unregister any articles that change from ham to
	spam or vice-versa in the course of the summary buffer usage; use
	the new spam-register-routine
	(spam-ham-copy-routine, spam-ham-move-routine,
	spam-mark-spam-as-expired-and-move-routine): check that the list
	of groups is not nil, because apply doesn't like to apply a
	function across nil
	(spam-registration-functions): variable for looking up spam/ham
	registration/unregistration functions based on a spam-use-* symbol
	(spam-classification-valid-p, spam-process-type-valid-p)